# sunbeam

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  Readme.md  Snakefile  conda-requirements.txt  config.yml  databases.yml  decontam_human.json  decontam_phix.json  docker_config.yml  environment.yml  example_config.yaml  example_config.yml  functions.snakefile  generate_dockerfile.sh  install.sh  install_igv.sh  manage-version.sh  missing_targets.md  pairing.rules  pyproject.toml  pytest.ini  qc.rules  reformat.sh  requirements.txt  setup.err  setup.py  shields.json  slim.Dockerfile  uninstall.sh  xenopeltis_env.yaml
.circleci/: config.yml  dump_conda_env.bash
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: build.yml  check_conda_envs.yml  condabot.yml  dockerhub.yml  integration-tests.yml  linter.yml  pr.yml  publish.yml  push.yml  release.yml  test_integrations.yml  test_slurm.yml  test_tar_release.yml  tests.yml
.tests/: config_fixture.py  targets.txt  targets_single_end.txt  targets_singleend.txt  test_config.yml
.tests/data/: README.md
.tests/e2e/: test_sunbeam_all.py  test_sunbeam_config.py  test_sunbeam_extend.py  test_sunbeam_init.py  test_sunbeam_list_samples.py  test_sunbeam_run.py
annotation/: annotation.rules  blast.rules  config.yml  orf.rules
assembly/: assembly.rules  bowtie.rules  config.yml
classify/: classify.rules  config.yml
configs/: cluster.json  example_config.yml  respublica_config.yml
dev_scripts/: README.md  dump_.snakemake.sh  generate_and_push_docker_image.sh  generate_archive.sh  generate_dockerfile.sh  reformat.sh  sunbeam_config.yml
docs/: Makefile  citation.rst  commands.rst  conf.py  dev.rst  dev_extensions.rst  docker-extensibility-brainstorm.md  examples.rst  extensions.rst  faqs.rst  index.rst  install.rst  make.bat  manage-version.rst  quickstart.rst  requirements.txt  run_tests.rst  structure.rst  usage.rst
envs/: annotation.yml  assembly.yml  bcftools_samtools.yml  biopython.yml  biopython_pysam.yml  blast.yml  bwa.yml  bwa_samtools.yml  classify.yml  cutadapt.yml  decontaminate.yml  download.yml  fastqc.yml  grabseqs.yml  komplexity.yml  kraken-biom.yml  kz.yml  mapping.yml  megahit.yml  minimap2_samtools.yml  multiqc.yml  numpy.yml  pandas.yml  prodigal.yml  qc.yml  rbt.yml  reports.yml  rust-bio-tools.yml  samtools.yml  trimmomatic.yml  vsearch.yml
extensions/: README.md
lib/: parsers.py
qc/: config.yml  decontaminate.rules  qc.rules
rules/: targets.rules
stable_env/: v2.1.0.txt  v3.0.0.txt  v4.0.0.txt
sunbeam/: __init__.py  _version.py  config.py  decontam.py  logging.py  qc.py  reports.py
sunbeamlib/: __init__.py  config.py  decontam.py  igv.py  initialize.py  mapping.py  mod_config.py  parse.py  parsers.py  post.py  qc.py  reports.py  resources.py  samtools.py
tests/: cfg_template.yml  config_fixture.py  conftest.py  deploy_blast_db.sh  deploy_kraken_db.sh  find_targets.py  generate_dummy_data.py  prep_config_file.py  run_tests.bash  seqid2taxid.map  snakefile_kraken_db  targets.txt  targets_single_end.txt  targets_singleend.txt  test-config.yml  test.sh  test_config.yml  test_config_defaults.yml  test_file.flagstat  test_mapping.py  test_suite.bash
util/: dirs.py  lists.py  varsub.py
virome/: annotation.rules
workflow/: Snakefile
(+379 files in other folders)
